Issue #000 fix: encrypt and decrypt refactoring.