@@ -1,16 +1,26 @@
 /** */
 package org.sunbird.common.models.util.datasecurity.impl;
 
+import java.security.InvalidKeyException;
+import java.security.Key;
+import java.security.NoSuchAlgorithmException;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
-
-import org.apache.commons.codec.binary.Base64;
+import javax.crypto.BadPaddingException;
+import javax.crypto.Cipher;
+import javax.crypto.IllegalBlockSizeException;
+import javax.crypto.NoSuchPaddingException;
+import javax.crypto.spec.SecretKeySpec;
 import org.apache.commons.lang3.StringUtils;
+import org.sunbird.common.exception.ProjectCommonException;
 import org.sunbird.common.models.util.JsonKey;
+import org.sunbird.common.models.util.LoggerEnum;
+import org.sunbird.common.models.util.ProjectLogger;
 import org.sunbird.common.models.util.PropertiesCache;
 import org.sunbird.common.models.util.datasecurity.EncryptionService;
+import org.sunbird.common.responsecode.ResponseCode;
 
 /**
  * Default data encryption service
@@ -19,8 +29,24 @@ import org.sunbird.common.models.util.datasecurity.EncryptionService;
  */
 public class DefaultEncryptionServivceImpl implements EncryptionService {
 
-  private String sunbirdEncryption = "";
+  private static String encryption_key = "";
 
+  private String sunbirdEncryption = "";
+  
+  private static Cipher c = null;
+  
+  static {
+	  encryption_key = getSalt();
+	    Key key = generateKey();
+	    try {
+			c = Cipher.getInstance(ALGORITHM);
+			c.init(Cipher.ENCRYPT_MODE, key);
+		} catch (Exception e) {
+			// TODO Auto-generated catch block
+			e.printStackTrace();
+		}
+  }
+  
   public DefaultEncryptionServivceImpl() {
     sunbirdEncryption = System.getenv(JsonKey.SUNBIRD_ENCRYPTION);
     if (StringUtils.isBlank(sunbirdEncryption)) {
@@ -73,7 +99,6 @@ public class DefaultEncryptionServivceImpl implements EncryptionService {
     } else {
       return data;
     }
-	  
   }
 
   /**
@@ -82,8 +107,51 @@ public class DefaultEncryptionServivceImpl implements EncryptionService {
    * @param value String password
    * @param encryption_key
    * @return encrypted password.
+   * @throws NoSuchPaddingException
+   * @throws NoSuchAlgorithmException
+   * @throws InvalidKeyException
+   * @throws BadPaddingException
+   * @throws IllegalBlockSizeException
    */
-  public static String encrypt(String value) {
-	  return Base64.encodeBase64String(value.getBytes());
+  @SuppressWarnings("restriction")
+  public static String encrypt(String value)
+      throws NoSuchAlgorithmException, NoSuchPaddingException, InvalidKeyException,
+          IllegalBlockSizeException, BadPaddingException {
+
+	  String eValue = value;
+	  if (null != c) {
+		  String valueToEnc = null;
+		    for (int i = 0; i < ITERATIONS; i++) {
+		      valueToEnc = encryption_key + eValue;
+		      byte[] encValue = c.doFinal(valueToEnc.getBytes());
+		      eValue = new sun.misc.BASE64Encoder().encode(encValue);
+		    }
+	  }
+    return eValue;
+  }
+
+  private static Key generateKey() {
+    return new SecretKeySpec(keyValue, ALGORITHM);
+  }
+
+  /** @return */
+  public static String getSalt() {
+    if (!StringUtils.isBlank(encryption_key)) {
+      return encryption_key;
+    } else {
+      encryption_key = System.getenv(JsonKey.ENCRYPTION_KEY);
+      if (StringUtils.isBlank(encryption_key)) {
+        ProjectLogger.log("Salt value is not provided by Env");
+        encryption_key = PropertiesCache.getInstance().getProperty(JsonKey.ENCRYPTION_KEY);
+      }
+    }
+    if (StringUtils.isBlank(encryption_key)) {
+      ProjectLogger.log("throwing exception for invalid salt==", LoggerEnum.INFO.name());
+      throw new ProjectCommonException(
+          ResponseCode.saltValue.getErrorCode(),
+          ResponseCode.saltValue.getErrorMessage(),
+          ResponseCode.SERVER_ERROR.getResponseCode());
+    }
+    return encryption_key;
   }
 }
